[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/autoloads/settings.gd" type="Script" id=1]
[ext_resource path="res://resources/main_theme.tres" type="Theme" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.270588, 0.231373, 0.160784, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="Settings" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="PopupPanel" type="PopupPanel" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -90.0
margin_right = 160.0
margin_bottom = 90.0
rect_min_size = Vector2( 320, 180 )
theme = ExtResource( 2 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="PopupPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="PopupPanel/VBoxContainer"]
margin_top = 40.0
margin_right = 320.0
margin_bottom = 53.0
text = "Settings"
align = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="PopupPanel/VBoxContainer"]
margin_top = 57.0
margin_right = 320.0
margin_bottom = 73.0

[node name="Label" type="Label" parent="PopupPanel/VBoxContainer/HBoxContainer2"]
margin_top = 1.0
margin_right = 63.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Sound"

[node name="Sound" type="HSlider" parent="PopupPanel/VBoxContainer/HBoxContainer2"]
margin_left = 67.0
margin_right = 320.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
max_value = 1.0
step = 0.01
value = 1.0

[node name="HBoxContainer3" type="HBoxContainer" parent="PopupPanel/VBoxContainer"]
margin_top = 77.0
margin_right = 320.0
margin_bottom = 93.0

[node name="Label" type="Label" parent="PopupPanel/VBoxContainer/HBoxContainer3"]
margin_top = 1.0
margin_right = 63.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Music"

[node name="Music" type="HSlider" parent="PopupPanel/VBoxContainer/HBoxContainer3"]
margin_left = 67.0
margin_right = 320.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
max_value = 1.0
step = 0.01
value = 1.0

[node name="Keybinds" type="Button" parent="PopupPanel/VBoxContainer"]
margin_top = 97.0
margin_right = 320.0
margin_bottom = 116.0
text = "Keybinds"
flat = true

[node name="Quit" type="Button" parent="PopupPanel/VBoxContainer"]
margin_top = 120.0
margin_right = 320.0
margin_bottom = 139.0
text = "Quit to Main Menu"
flat = true

[connection signal="popup_hide" from="PopupPanel" to="." method="_on_PopupPanel_popup_hide"]
[connection signal="value_changed" from="PopupPanel/VBoxContainer/HBoxContainer2/Sound" to="." method="_on_Sound_value_changed"]
[connection signal="value_changed" from="PopupPanel/VBoxContainer/HBoxContainer3/Music" to="." method="_on_Music_value_changed"]
[connection signal="pressed" from="PopupPanel/VBoxContainer/Keybinds" to="." method="_on_Keybinds_pressed"]
[connection signal="pressed" from="PopupPanel/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
